--- a/index.css
+++ b/index.css
@@ -7,11 +7,12 @@ body {
     margin: 0;
     display: flex;
     height: 100dvh;
-    perspective: 1000px;
+    perspective: 1200px;
     font: 16px/1.4 sans-serif;
     overflow: hidden;
 
     background-color: #232425;
+    
 }
 
 .book {
@@ -28,6 +29,17 @@ body {
     rotate: 1 0 0 17deg;
 }
 
+
+.pdf-render{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 9/16;
+    /* object-fit: cover; */
+}
+
+
+
+
 .page {
     /* PS: Don't go below Z thickness of 0.4 to prevent browser's natural "zIndex" stacking */
     --z: 5px;
@@ -35,16 +47,17 @@ body {
     flex: none;
     display: flex;
     width: 100%;
-    height: 600px;
+    /* height: 430px; */
     /*1* allow pointer events on pages */
     pointer-events: all;
     user-select: none;
     transform-style: preserve-3d;
-    border: 1px solid #0008;
+    border: 1px solid #bbb;
     transform-origin: left center;
+    
     transition: transform 1s,
-        rotate 0.5s ease-in
-            calc((min(var(--i), var(--c)) - max(var(--i), var(--c))) * 50ms);
+    rotate 0.5s ease-in
+    calc((min(var(--i), var(--c)) - max(var(--i), var(--c))) * 50ms);
     translate: calc(var(--i) * -100%) 0px 0px;
     transform: translateZ(
         calc((var(--c) - var(--i) - 0.5) * var(--z))
@@ -56,7 +69,7 @@ body {
 .back {
     flex: none;
     width: 100%;
-    padding: 2rem;
+    /* padding: 2rem; */
     backface-visibility: hidden;
     background-color: #33a1d4;
     /* Fix backface visibility Firefox: */
